--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                <span id="busuanzi_container_site_pv">
  <span id="busuanzi_value_site_pv"></span> 
 			<span id="/2017/03/05/hello-world/"class="leancloud_visitors" data-flag-title="Hello World">
-					 &nbsp;Pengunjung
+					 &nbsp;Views
 					</span>
              </span>
           
@@ -511,11 +511,6 @@
   </a>
 </div>
 
-<div class="theme-info" style="display:hidden">
-	<span id="busuanzi_container_site_uv">
-     | &nbsp; Total visited <span id="busuanzi_value_site_uv"></span> times.
-	</span>
-</div>
 
 
         
